# erc8183-skill-marketplace

./: .env.example  .gitignore  README.md  SECURE-LAUNCH.md  launcher.py  pyproject.toml
examples/: client.py
src/: auto_settle.py  register.py  server.py
src/skills/: __init__.py  liquidity_depth.py  rug_risk.py  wallet_profiler.py
